[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-client = "0.4.0"
k8s-cri = "0.7.0"
log = "0.4.20"
oci-distribution = { version = "0.9.4" }
openssl = { version = "0.10.54", features = ["vendored"] }
serde = "1.0.189"
serde_json = "1.0.107"
tokio = { version = "1.14", features = ["full"] }
tonic = "0.10.2"
tower = "0.4.13"
